@@ -43,10 +43,9 @@ import com.servoy.j2db.util.IDelegate;
 
 /**
  * Property controller for properties with a fixed list of values to be shown in a combo box.
- * 
+ *
  * @author rgansevles
  */
-
 
 public class ComboboxPropertyController<T> extends PropertyController<T, Integer> implements IMergeablePropertyDescriptor
 {
@@ -173,9 +172,9 @@ public class ComboboxPropertyController<T> extends PropertyController<T, Integer
 
 	/**
 	 * Convert values based on model index.
-	 * 
+	 *
 	 * @author rgansevles
-	 * 
+	 *
 	 */
 	public static class ComboboxModelConverter<T> implements IPropertyConverter<T, Integer>
 	{
@@ -191,12 +190,14 @@ public class ComboboxPropertyController<T> extends PropertyController<T, Integer
 			Object[] real = model.getRealValues();
 			for (int i = 0; i < real.length; i++)
 			{
-				if (real[i] == value || real[i] != null && real[i].equals(value))
+				if (real[i] == value || real[i] != null && i != model.getDefaultValueIndex() && real[i].equals(value))
 				{
-					return new Integer(i);
+					return Integer.valueOf(i);
 				}
 			}
-			return new Integer(-1); // not found
+
+			return Integer.valueOf(value == null || (model.getDefaultValueIndex() != -1 && value.equals(real[model.getDefaultValueIndex()]))
+				? model.getDefaultValueIndex() : -1);
 		}
 
 		public T convertValue(Object id, Integer value)
@@ -205,7 +206,7 @@ public class ComboboxPropertyController<T> extends PropertyController<T, Integer
 			if (value != null)
 			{
 				int index = value.intValue();
-				if (index >= 0 && index < real.length)
+				if (index >= 0 && index < real.length && index != model.getDefaultValueIndex())
 				{
 					return real[index];
 				}
@@ -258,9 +259,9 @@ public class ComboboxPropertyController<T> extends PropertyController<T, Integer
 
 	/**
 	 * Merged ComboboxPropertyController.
-	 * 
+	 *
 	 * @author rgansevles
-	 * 
+	 *
 	 * @param <T>
 	 */
 	public static class MergedComboboxPropertyController<T> extends ComboboxPropertyController<T> implements IMergedPropertyDescriptor
@@ -273,7 +274,7 @@ public class ComboboxPropertyController<T> extends PropertyController<T, Integer
 
 		/**
 		 * Merge 2 models, returns the intersection sorted as in the first model.
-		 * 
+		 *
 		 * @param <T>
 		 * @param model1
 		 * @param model2
